增加音量条自动隐藏功能
类似系统音量条，按下音量键时显示，过3秒自动隐藏。

--- a/WB100W/app/src/main/res/layout/activity_main.xml
+++ b/WB100W/app/src/main/res/layout/activity_main.xml
@@ -242,6 +242,7 @@
 		    </RelativeLayout>
 	    </LinearLayout>
 	    <LinearLayout
+			android:id="@+id/volumePlaneLayout"
 	        android:layout_alignParentRight="true"
 		    android:layout_width="20px"
 		    android:layout_height="wrap_content"
