--- a/WB100W/app/src/main/res/layout/activity_main.xml
+++ b/WB100W/app/src/main/res/layout/activity_main.xml
@@ -12,15 +12,25 @@
 		    android:layout_height="wrap_content"
 		    android:layout_centerInParent="true"
 		    android:paddingLeft="20dip" >
-		    <ImageView
-		        android:id="@+id/batteryImageView"
-			    android:layout_width="46px"
-			    android:layout_height="21px"
-			    android:layout_centerVertical="true"
-			    android:background="@drawable/icon_battery_full"/>
+			<ImageView
+				android:id="@+id/batteryImageView"
+				android:layout_width="46px"
+				android:layout_height="21px"
+				android:layout_centerVertical="true"
+				android:background="@drawable/icon_battery_full"/>
+			<com.example.wb100w.ui.apps.ArialBlackTextView
+				android:id="@+id/batteryPersentageTextView"
+				android:layout_centerVertical="true"
+				android:layout_toRightOf="@+id/batteryImageView"
+				android:gravity="right"
+				android:layout_marginLeft="10dip"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:text=""
+				style="@style/down_radius1_black_style" />
 		    <ImageView
 		        android:id="@+id/wifiImageView"
-		        android:layout_toRightOf="@+id/batteryImageView"
+		        android:layout_toRightOf="@+id/batteryPersentageTextView"
 		        android:layout_marginLeft="10dip"
 			    android:layout_width="28px"
 			    android:layout_height="22px"
