1. 增加Multimedia app； 2. My APP 指定应用使用指定图标。

--- a/Multimedia/app/src/main/res/layout/navigationbar_common.xml
+++ b/Multimedia/app/src/main/res/layout/navigationbar_common.xml
@@ -30,7 +30,7 @@
 	            android:textColor="@color/white"
 	            android:textSize="@dimen/fontSize61"
 				style="@style/down_radius1_black_style"
-				android:visibility="visible" />
+				android:visibility="invisible" />
 	    </LinearLayout>
 	
 	    <TextView
